--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,198 @@
+
 body {
+
+  background-color: rgb(29, 30, 33);
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  font-family: 'Inter', sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main {
+  width: 300px;
+  height: 600px;
+  background-color: black;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main:hover {
+  width: 305px;
+  height: 605px;
+  transition: 0.5s;
+  /* cursor: pointer; */
+  border: 1px solid plum;
+}
+
+.main--picture {
+  height: 40%;
+  width: 100%;
+  border-radius: inherit;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.picture-portrait {
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+
+}
+
+.main--description {
+  width: 100%;
+  height: 13%;
+  background-color: rgb(21, 22, 29);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  line-height: 1;
+}
+
+.description-name,
+.description-job,
+.description-site {
+  margin: 0;
+  padding: 5px;
+}
+
+.description-name {
+  font-size: 21px;
+  font-weight: 800;
+}
+
+.description-job {
+  font-size: 12px;
+  font-weight: 100;
+  color: gray;
+}
+
+.description-site {
+  font-size: 9px;
+  font-weight: 400;
+  color: gray
+}
+
+
+
+.main--contact {
+  width: 100%;
+  height: 7%;
+  background-color: rgb(21, 22, 29);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-email,
+.contact-linkedin {
+
+  width: 100px;
+  height: 30px;
+  border-radius: 6px;
+  border:none;
+
+}
+
+
+.contact-email:hover,
+.contact-linkedin:hover {
+  border: 1px solid plum;
+  width: 105;
+  height: 35px;
+  transition: 0.2s;
+  cursor: pointer;
+}
+
+.contact-email {
+  margin-right: 5px;
+  background-color: rgb(216, 216, 216);
+  color: black;
+  font-weight: 700;
+}
+
+.contact-linkedin {
+  margin-left: 5px;
+  background-color: rgb(26, 146, 238);
+  color: white;
+  font-weight: 700;
+}
+
+.fa-solid.fa-envelope,
+.fa-brands.fa-linkedin {
+  margin-right: 4px;
+}
+
+.main--info {
+  width: 100%;
+  height:33% ;
+  background-color: rgb(21, 22, 29);
+  display: flex;
+  flex-direction: column;
+  align-items: ce;
+
+}
+
+.about-title,
+.interests-title,
+.about-content,
+.interests-content {
+  margin: 0;
+}
+
+.about-title,
+.interests-title {
+  color: white;
+  font-size: 1rem;
+  margin-left: 20px;
+  margin-top: 8px;
+  margin-bottom: 5px;
+}
+
+.about-content,
+.interests-content {
+  margin-left: 20px;
+  margin-right: 20px;
+  color: gray;
+  font-size: 11px;
+}
+
+.main--footer {
+  width: 100%;
+  height: 7%;
+  background-color: black;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border-radius: inherit;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.fa-brands.fa-twitter,
+.fa-brands.fa-facebook-square,
+.fa-brands.fa-instagram-square,
+.fa-brands.fa-github-square {
+  color: gray;
+  font-size: 1.7rem;
+  margin: 5px 15px 5px 15px;
+}
+
+.fa-brands.fa-twitter:hover,
+.fa-brands.fa-facebook-square:hover,
+.fa-brands.fa-instagram-square:hover,
+.fa-brands.fa-github-square:hover {
+  color: rgb(249, 187, 249);
+  font-size: 1.8rem;
+  transition: 0.3s;
+  cursor: pointer;
 }
